[project]
name = "site-infra"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "pulumi>=3.0.0,<4.0.0",
    "pulumi-cloudflare>=6.9.1",
    "ruff>=0.13.2",
]

[dependency-groups]
dev = [
    "ty>=0.0.3",
]

[tool.ty]
# Ignore unresolved imports as pulumi and pulumi-cloudflare don't have complete type stubs
[tool.ty.rules]
unresolved-import = "ignore"
